Fix license headers